# autodidact

./: README.md
02_28_2022/: app.cpp
03_01_2022/: app.cpp
03_02_2022/: App.java  app_a.py
03_03_2022/: App.java  CMakeLists.txt  app.cpp  app_a.h  app_b.h
03_04_2022/: CMakeLists.txt  app.cpp  app_a.h  app_b.h
03_07_2022/: CMakeLists.txt  app.cpp  app_a.cpp  app_a.h  app_b.cpp  app_b.h
03_08_2022/: app.cpp  app_a.cpp  app_a.h  app_b.cpp  app_b.h  set_record.txt
03_10_2022/: app_a.cpp  app_a.h
03_10_2022/gtest/: unit_test.cpp
03_30_2022/cmake/build_type/: CMakeLists.txt  hello_world.cpp
03_30_2022/cmake/compiler_flags/a/: CMakeLists.txt
03_30_2022/cmake/conditional/: CMakeLists.txt
03_30_2022/cmake/option_dependency/: CMakeLists.txt
03_30_2022/cmake/options/: message.cpp
05_18_2023/: cpp.cpp  myinclude.cpp  myinclude.hpp
05_20_2023/: main.cpp  myinclude.cpp  myinclude.hpp
05_21_2023/: main.cpp  myinclude.cpp  myinclude.hpp
05_23_2023/: main.cpp  myinclude.cpp  myinclude.hpp
05_24_2023/: main.cpp  myinclude.cpp  myinclude.hpp
05_25_2023/: .main.cpp.swp  .myinclude.cpp.swp  .myinclude.hpp.swp  main.cpp  myinclude.cpp  myinclude.hpp
06_09_2023/: boot.html
11_10_2022/: abstract_factory.cpp
11_11_2022/: prototype.cpp
11_12_2022/: decorator.cpp
11_13_2022/: facade.cpp
11_14_2022/: flyweight.cpp
11_22_2022/: composite.cpp  composite.py  project1.py  singleton.cpp
before/02_28_2022/: CMakeLists.txt
before/03_01_2022/: CMakeLists.txt
before/03_02_2022/: CMakeLists.txt  app.cpp  app.py
before/03_03_2022/: app.py  app_a.py
before/03_04_2022/: app_a.cpp  app_a.h  app_b.cpp
before/03_07_2022/: app.py  app_a.h  app_a.py  app_b.cpp  app_b.py
before/03_08_2022/: CMakeLists.txt  app_b.cpp
before/03_10_2022/: 1650A.cpp  CMakeLists.txt  app.cpp  app_a.cpp  app_a.h  solve.cpp
before/03_10_2022/gtest/: CMakeLists.txt
before/cpp/class/01_07_2022/: delete.cpp
before/cpp/class/01_11_2022/: a.cpp
before/cpp/january_2022/std/1_1_2022/: function.cpp
before/cpp/november_2021/1/: topic.txt
before/cpp/november_2021/1/10_29_2021/: a.cpp
before/cpp/november_2021/1/11_08_2021/: a.cpp
before/general/01_04_2022/: general.cpp  hie.cpp
cmake/03_30_2022/compiler_dependent/: CMakeLists.txt  hello_world.cpp
cmake/03_30_2022/discovering_operating_system/: CMakeLists.txt
cmake/03_30_2022/library_object/a/: CMakeLists.txt
cmake/03_30_2022/library_object/b/: CMakeLists.txt
cmake/03_30_2022/options/: CMakeLists.txt
cmake/03_30_2022/platform_dependent/: CMakeLists.txt  hello_world.cpp
cmake/03_30_2022/system_information/: system_information.txt
cmake/03_31_2022/processor_architecture/: CMakeLists.txt  arch_dependent.cpp
cmake/03_31_2022/processor_instruction/: .CMakeLists.txt.swp  .config.h.swp  .processor-info.cpp.swp  CMakeLists.txt  config.h.in  processor-info.cpp
cmake/04_01_2022/detecting_python/: CMakeLists.txt
cmake/04_01_2022/detecting_python_library/: .CMakeLists.txt.swp  .hello-embedded-python.c.swp  CMakeLists.txt  hello-embedded-python.c
cmake/04_01_2022/standard/: CMakeLists.txt
cmake/04_07_2022/unit_test/: CMakeLists.txt  main.cpp  sum_integers.cpp  test.cpp  test.py
cpp/c++17/structured_binding/: 10_14_2021.cpp  10_18_2021.cpp  10_21_2021.cpp
cpp/class/01_05_2022/: a.cpp
cpp/class/01_10_2022/: a.cpp
cpp/january_2022/general/01_04_2022/: general.java
cpp/november_2021/1/10_27_2021/: a.cpp
cpp/november_2021/1/10_28_2021/: a.cpp
cpp/november_2021/1/11_03_2021/: a.cpp
cpp/november_2021/1/11_04_2021/: a.cpp
cpp/november_2021/11_02_2021/: a.cpp
cpp/november_2021/11_09_2021/: a.cpp
cpp/november_2021/11_1_2021/: a.cpp
cpp/november_2021/2/: a.cpp  topic.txt
gcc/Wall/: gcc.txt  wall.cpp
general/01_04_2022/: .hie.cpp.swp  general.py
